fix(select): z-index but not overflow

--- a/src/Components/FormComponents/Select/select.module.scss
+++ b/src/Components/FormComponents/Select/select.module.scss
@@ -3,8 +3,6 @@
   flex-direction: column;
   gap: 6px;
   justify-content: space-between;
-
-
 }
 
 .label{
@@ -25,6 +23,8 @@
   transition: border-color 0.2s, box-shadow 0.2s;
   gap: 8px;
   flex-wrap: wrap;
+  width: 360px;
+  //justify-content: space-between;
   position: relative;
 }
 .toggle::after{
@@ -40,26 +40,23 @@
 
 .toggle:hover{
   border: var(--border-grey-400-regular);
-
 }
 .toggle.active {
   border: var(--border-grey-300-regular);
   box-shadow: var(--effect-grey-shadow);
 }
 
-.dropdown {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
 .menu {
+  position: absolute;
+  top: calc(100% + 12px);
+  left: 0;
   width: 100%;
   max-height: 190px;
   overflow-y: auto;
   box-shadow: var(--effect-shadow-m-center);
   border-radius: var(--border-radius-m);
   background-color: var(--color-white);
+  z-index: 1;
 }
 .menu::-webkit-scrollbar{
   width: 16px;
