--- a/src/Components/Modal/modal.module.scss
+++ b/src/Components/Modal/modal.module.scss
@@ -39,13 +39,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-height: 65vh;
+  max-height: 55vh;
   flex-grow: 2;
 
-  width: 408px;
+  //width: 408px;
   background-color: var(--color-white);
   border-radius: var(--border-radius-m);
-  //overflow: hidden;
+  overflow: auto;
   box-shadow: var(--effect-shadow-l-center);
 }
 
@@ -94,7 +94,7 @@
 .content{
   flex-grow: 2;
   padding: 4px 20px;
-  overflow-y: auto;
+  //overflow-y: auto;
 }
 
 .footer{
